tests/integration/errors/error.orng
// 117
fn main() -> Int {
    let x: Int!Byte = .err(117)
    x.err
}